getting all paginated books
